samples/_failures_safe/1761546633_ef2d36_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a89660ca.c: In function ‘main’:
./samples/SAFE/__tmp_a89660ca.c:176:5: error: expected expression at end of input
  176 |     if (
      |     ^~
./samples/SAFE/__tmp_a89660ca.c:176:5: error: expected declaration or statement at end of input
